# SPARCED

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
SPARCED/: __main__.py
SPARCED.egg-info/: PKG-INFO  SOURCES.txt
SPARCED/SPARCED.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
SPARCED/src/: Experiment.py  Simulation.py
benchmarks/: README.md
benchmarks/DNA-repair/: DNA-repair.yml  measurements.tsv
benchmarks/LINCS-RNAseq/: LINCS-RNAseq.yml
benchmarks/LINCS-RPPA-Abundance/: LINCS-RPPA-Abundance.yml
benchmarks/TRAIL_time-to-death/: measurements.tsv
benchmarks/cell_cycle/: cell_cycle.yml  conditions.tsv
benchmarks/etoposide-induced-cell-death/: etoposide-induced-cell-death.yml  measurements.tsv
benchmarks/inhibition-of-stochastic-apoptosis/: inhibition-of-stochastic-apoptosis.yml
benchmarks/p53-dynamics/: p53-dynamics.yml
benchmarks/receptor-ligand_cooperativity/: receptor-ligand_cooperativity.yml
benchmarks/ribosome-doubling-rate/: measurements.tsv
benchmarks/stochastic-expression/: observables.tsv  stochastic-expression.yml
benchmarks/survival-signalling/: survival-signalling.yml
benchmarks/test_benchmark/: conditions.tsv  measurements.tsv  observables.tsv  test_benchmark.yml  visualizations.tsv
container/: Dockerfile  sparced.def  sparced_test.def
docs/source/: installation-guide.md
models/Basic_model/: ant_Basic_model.txt  out_Parameters.txt
models/SPARCED_standard/: ant_SPARCED_standard.txt  sbml_SPARCED_standard.xml
results/New-Simulation/: GrowthStim_S_0.txt  GrowthStim_T_0.txt  GrowthStim_incub_S_0.txt  GrowthStim_incub_T_0.txt
src/: cli.py
src/SPARCED.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+2 more)
(+168 files in other folders)
